# UERANSIM

./: CMakeLists.txt  Dockerfile.backup  docker.sh
docker/ueransim/ueransim-base/: Dockerfile
docker/ueransim/ueransim-gnb/: Dockerfile
src/gnb/: CMakeLists.txt
src/gnb/sctp/: task.cpp
